--- a/roles/gitlab/templates/values/00-main.j2
+++ b/roles/gitlab/templates/values/00-main.j2
@@ -47,12 +47,23 @@ gitlab:
         enabled: true
 {% endif %}
 
+
 global:
   registry:
     enabled: false
+{% if private_image_repository is defined and private_image_repository != "" %}
+  kubectl:
+    image:
+      repository: "{{ private_image_repository }}/gitlab-org/build/cng/kubectl"
+  gitlabBase:
+    image:
+      repository: "{{ private_image_repository }}/gitlab-org/build/cng/gitlab-base"
+{% endif %}
   certificates:
     customCAs:
+{% if not cluster_k8s %}
       - configMap: openshift-service-ca.crt
+{% endif %}
 {% for item in dsc.additionalsCA %}
 {% if item.kind == 'ConfigMap' %}
       - configMap: {{ item.name }}
@@ -93,6 +104,31 @@ global:
       autoLinkUser: ["openid_connect"]
       providers:
         - secret: openid-connect
+
+{% if private_image_repository is defined and private_image_repository != "" %}
+shared-secrets:
+  selfsign:
+    image:
+      repository: "{{ private_image_repository }}/gitlab-org/build/cng/cfssl-self-sign"
+{% endif %}
+
+{% if private_image_repository is defined and private_image_repository != "" %}
+minio:
+  image: "{{ private_image_repository }}/minio"
+  minioMc:
+    image: "{{ private_image_repository }}/mc"
+    
+gitaly:
+  image:
+    repository: "{{ private_image_repository }}gitlab-org/build/cng/gitaly"
+
+redis:
+  image:
+    registry: "{{ private_image_repository }}"
+  metrics:
+    image:
+      registry: "{{ private_image_repository }}"
+{% endif %}
 
 prometheus:
   install: false
