--- a/roles/harbor/templates/values/10-proxy.j2
+++ b/roles/harbor/templates/values/10-proxy.j2
@@ -1,3 +1,4 @@
+{% if dsc.proxy.enabled %}
 proxy:
   httpProxy: {{ dsc.proxy.http_proxy }}
   httpsProxy: {{ dsc.proxy.https_proxy }}
@@ -12,3 +13,4 @@ proxy:
     - database
     - redis
     - exporter
+{% endif %}
