--- a/roles/console-dso/templates/values/00-main.j2
+++ b/roles/console-dso/templates/values/00-main.j2
@@ -5,9 +5,21 @@ ingress:
   annotations: {{ dsc.ingress.annotations }}
   labels: {{ dsc.ingress.labels }}
 
+{% if dsc.general.registry != "" %}
+server:
+  container:
+    image: "{{ dsc.general.registry }}/cloud-pi-native/console/server:{{ dsc.console.release }}"
+
+client:
+  container:
+    image: "{{ dsc.general.registry }}/cloud-pi-native/console/client:{{ dsc.console.release }}"
+{% endif %}
 
 postgres:
   container:
+{% if dsc.general.registry != "" %}
+    image: "{{ dsc.general.registry }}/postgres:15.3"
+{% endif %}
     db: dso-console-db
     user: dso
     pass: {{ dsc.console.dbPassword }}
