--- a/roles/vault/templates/values/00-main.j2
+++ b/roles/vault/templates/values/00-main.j2
@@ -10,10 +10,21 @@ injector:
     enabled: true
 {% endif %}
   image:
+{% if  dsc.general.registry == "" %}
     repository: docker.io/hashicorp/vault-k8s
   agentImage:
     repository: docker.io/hashicorp/vault
+{% endif %}
+{% if dsc.general.registry != "" %}
+    repository: "{{ dsc.general.registry }}/hashicorp/vault-k8s"
+  agentImage:
+    repository: "{{ dsc.general.registry }}/hashicorp/vault"
+{% endif %}
 server:
+{% if dsc.general.registry != "" %}
+  image:
+    repository: "{{ dsc.general.registry }}/hashicorp/vault"
+{% endif %}
   route:
     enabled: false
   ha:
@@ -46,6 +57,7 @@ server:
     enable: true
     size: {{ dsc.vault.pvcSize }}
   image:
+{% if  dsc.general.registry == "" %}
     repository: docker.io/hashicorp/vault
 csi:
   image:
@@ -53,6 +65,16 @@ csi:
   agent:
     image:
       repository: docker.io/hashicorp/vault
+{% endif %}
+{% if dsc.general.registry != "" %}
+    repository: "{{ dsc.general.registry }}/hashicorp/vault"
+csi:
+  image:
+    repository: "{{ dsc.general.registry }}/hashicorp/vault-csi-provider"
+  agent:
+    image:
+      repository: "{{ dsc.general.registry }}/hashicorp/vault"
+{% endif %}
 {% if dsc.global.metrics.enabled %}
 serverTelemetry:
   serviceMonitor:
