--- a/roles/gitlab-operator/templates/values.yaml.j2
+++ b/roles/gitlab-operator/templates/values.yaml.j2
@@ -1,7 +1,12 @@
 watchCluster: true
 
 image:
+{% if  dsc.general.registry == "" %}
   registry: registry.gitlab.com
+{% endif %}
+{% if dsc.general.registry != "" %}                                                         
+  registry: "{{ dsc.general.registry }}"
+{% endif %}
   repository: gitlab-org/cloud-native
   name: gitlab-operator
   tag: {{ dsc.gitlabOperator.chartVersion }}
