--- a/roles/sonarqube/templates/pg-cluster-sonar.yaml.j2
+++ b/roles/sonarqube/templates/pg-cluster-sonar.yaml.j2
@@ -15,7 +15,13 @@ spec:
 
   # Parameters and pg_hba configuration will be append
   # to the default ones to make the cluster work
+{% if dsc.general.registry != "" %}
+  imageName: "{{ dsc.general.registry }}/cloudnative-pg/postgresql:16.1"
+{% endif %}
   postgresql:
+{% if dsc.general.registry != "" %}
+    image: "{{ dsc.general.registry }}/cloudnative-pg/postgresql:16.1"
+{% endif %}
     parameters:
       max_worker_processes: "60"
     pg_hba:
