--- a/roles/argocd/templates/values/00-main.j2
+++ b/roles/argocd/templates/values/00-main.j2
@@ -1,10 +1,3 @@
-serviceMonitor: &serviceMonitor
-  metrics:
-    enabled: true
-    serviceMonitor:
-      enabled: true
-      namespace: "{{ dsc.argocd.namespace }}"
-
 {% if dsc.general.registry != "" %}
 image:
   registry: "{{ dsc.general.registry }}"
@@ -52,7 +45,11 @@ redis:
     containerSecurityContext:
       enabled: false
 {% if dsc.global.metrics.enabled %}
-  <<: *serviceMonitor
+  metrics:
+    enabled: true
+    serviceMonitor:
+      enabled: true
+      namespace: {{ dsc.argocd.namespace }}
     podSecurityContext:
       enabled: false
     containerSecurityContext:
@@ -60,7 +57,13 @@ redis:
 {% endif %}
 controller:
   replicaCount: 3
-  <<: *serviceMonitor
+{% if dsc.global.metrics.enabled %}
+  metrics:
+    enabled: true
+    serviceMonitor:
+      enabled: true
+      namespace: {{ dsc.argocd.namespace }}
+{% endif %}
 dex:
   enabled: false
 server:
@@ -95,23 +98,45 @@ server:
         - TaskRun
         - PipelineRun
   extraEnvVars: []
-  <<: *serviceMonitor
+{% if dsc.global.metrics.enabled %}
+  metrics:
+    enabled: true
+    serviceMonitor:
+      enabled: true
+      namespace: {{ dsc.argocd.namespace }}
+{% endif %}
 repoServer:
   extraEnvVars: []
   replicaCount: 3
-  <<: *serviceMonitor
+{% if dsc.global.metrics.enabled %}
+  metrics:
+    enabled: true
+    serviceMonitor:
+      enabled: true
+      namespace: {{ dsc.argocd.namespace }}
+{% endif %}
 applicationSet:
   enabled: false
   replicaCount: 2
   webhook:
     ingress:
       ingressClassName: {{ dsc.ingress.className | default('') }}
-  <<: *serviceMonitor
+{% if dsc.global.metrics.enabled %}
+  metrics:
+    enabled: true
+    serviceMonitor:
+      enabled: true
+      namespace: {{ dsc.argocd.namespace }}
+{% endif %}
 notifications:
   enabled: false
   webhook:
     ingress:
       ingressClassName: {{ dsc.ingress.className | default('') }}
 {% if dsc.global.metrics.enabled %}
-  <<: *serviceMonitor
+  metrics:
+    enabled: true
+    serviceMonitor:
+      enabled: true
+      namespace: {{ dsc.argocd.namespace }}
 {% endif %}
