--- a/roles/cert-manager/templates/values/10-registry.j2
+++ b/roles/cert-manager/templates/values/10-registry.j2
@@ -1,4 +1,4 @@
-{% if dsc.general.registry != "" %}
+{% if dsc.general.registry %}
 image:
   repository: "{{ dsc.general.registry }}/cert-manager-controller"
 
