--- a/roles/harbor/templates/values/00-main.j2
+++ b/roles/harbor/templates/values/00-main.j2
@@ -45,40 +45,40 @@ nginx:
   replicas: 2
   serviceAccountName: harbor-sa
   image:
-{% if  dsc.general.registry == "" %}
+{% if dsc.general.registry is not defined or dsc.general.registry is defined and dsc.general.registry == "" %}
     repository: docker.io/goharbor/nginx-photon
 {% endif %}
-{% if dsc.general.registry != "" %}
+{% if dsc.general.registry %}
     repository: "{{ dsc.general.registry }}/goharbor/nginx-photon" 
 {% endif %}
 portal:
   replicas: 2
   serviceAccountName: harbor-sa
   image:
-{% if  dsc.general.registry == "" %}
+{% if dsc.general.registry is not defined or dsc.general.registry is defined and dsc.general.registry == "" %}
     repository: docker.io/goharbor/harbor-portal
 {% endif %}
-{% if dsc.general.registry != "" %}
+{% if dsc.general.registry %}
     repository: "{{ dsc.general.registry }}/goharbor/harbor-portal" 
 {% endif %}
 core:
   replicas: 3
   serviceAccountName: harbor-sa
   image:
-{% if  dsc.general.registry == "" %}
+{% if dsc.general.registry is not defined or dsc.general.registry is defined and dsc.general.registry == "" %}
     repository: docker.io/goharbor/harbor-core
 {% endif %}
-{% if dsc.general.registry != "" %}
+{% if dsc.general.registry %}
     repository: "{{ dsc.general.registry }}/goharbor/harbor-core" 
 {% endif %}
 jobservice:
   replicas: 2
   serviceAccountName: harbor-sa
   image:
-{% if  dsc.general.registry == "" %}
+{% if dsc.general.registry is not defined or dsc.general.registry is defined and dsc.general.registry == "" %}
     repository: docker.io/goharbor/harbor-jobservice
 {% endif %}
-{% if dsc.general.registry != "" %}
+{% if dsc.general.registry %}
     repository: "{{ dsc.general.registry }}/goharbor/harbor-jobservice" 
 {% endif %}
 registry:
@@ -86,38 +86,38 @@ registry:
   serviceAccountName: harbor-sa
   registry:
     image:
-{% if  dsc.general.registry == "" %}
+{% if dsc.general.registry is not defined or dsc.general.registry is defined and dsc.general.registry == "" %}
       repository: docker.io/goharbor/registry-photon
 {% endif %}
-{% if dsc.general.registry != "" %}
+{% if dsc.general.registry %}
       repository: "{{ dsc.general.registry }}/goharbor/registry-photon" 
 {% endif %}
   controller:
     image:
-{% if  dsc.general.registry == "" %}
+{% if dsc.general.registry is not defined or dsc.general.registry is defined and dsc.general.registry == "" %}
       repository: docker.io/goharbor/harbor-registryctl
 {% endif %}
-{% if dsc.general.registry != "" %}
+{% if dsc.general.registry %}
       repository: "{{ dsc.general.registry }}/goharbor/harbor-registryctl" 
 {% endif %}
 trivy:
   replicas: 2
   serviceAccountName: harbor-sa
   image:
-{% if  dsc.general.registry == "" %}
+{% if dsc.general.registry is not defined or dsc.general.registry is defined and dsc.general.registry == "" %}
     repository: docker.io/goharbor/trivy-adapter-photon
 {% endif %}
-{% if dsc.general.registry != "" %}
+{% if dsc.general.registry %}
     repository: "{{ dsc.general.registry }}/goharbor/trivy-adapter-photon" 
 {% endif %}
 database:
   internal:
     serviceAccountName: harbor-sa
     image:
-{% if  dsc.general.registry == "" %}
+{% if dsc.general.registry is not defined or dsc.general.registry is defined and dsc.general.registry == "" %}
       repository: docker.io/goharbor/harbor-db
 {% endif %}
-{% if dsc.general.registry != "" %}
+{% if dsc.general.registry %}
       repository: "{{ dsc.general.registry }}/goharbor/harbor-db" 
 {% endif %}
 {% if dsc.global.backup.type == 'velero' %}
@@ -128,19 +128,19 @@ redis:
   internal:
     serviceAccountName: harbor-sa
     image:
-{% if  dsc.general.registry == "" %}
+{% if dsc.general.registry is not defined or dsc.general.registry is defined and dsc.general.registry == "" %}
       repository: docker.io/goharbor/redis-photon
 {% endif %}
-{% if dsc.general.registry != "" %}
+{% if dsc.general.registry %}
       repository: "{{ dsc.general.registry }}/goharbor/redis-photon" 
 {% endif %}
 exporter:
   replicas: 1
   image:
-{% if  dsc.general.registry == "" %}
+{% if dsc.general.registry is not defined or dsc.general.registry is defined and dsc.general.registry == "" %}
     repository: docker.io/goharbor/harbor-exporter
 {% endif %}
-{% if dsc.general.registry != "" %}
+{% if dsc.general.registry %}
     repository: "{{ dsc.general.registry }}/goharbor/harbor-exporter" 
 {% endif %}
   serviceAccountName: harbor-sa
