--- a/roles/nexus/templates/nexus.yml.j2
+++ b/roles/nexus/templates/nexus.yml.j2
@@ -18,10 +18,10 @@ spec:
     spec:
       containers:
         - name: nexus
-{% if  dsc.general.registry == "" %}
+{% if dsc.general.registry is not defined or dsc.general.registry is defined and dsc.general.registry == "" %}
           image: sonatype/nexus3:{{ dsc.nexus.imageTag }}
 {% endif %}
-{% if dsc.general.registry != "" %}
+{% if dsc.general.registry %}
           image: "{{ dsc.general.registry }}/sonatype/nexus3:{{ dsc.nexus.imageTag }}"
 {% endif %}
           imagePullPolicy: "IfNotPresent"
