--- a/roles/vault/templates/values/00-main.j2
+++ b/roles/vault/templates/values/00-main.j2
@@ -10,18 +10,18 @@ injector:
     enabled: true
 {% endif %}
   image:
-{% if  dsc.general.registry == "" %}
+{% if dsc.general.registry is not defined or dsc.general.registry is defined and dsc.general.registry == "" %}
     repository: docker.io/hashicorp/vault-k8s
   agentImage:
     repository: docker.io/hashicorp/vault
 {% endif %}
-{% if dsc.general.registry != "" %}
+{% if dsc.general.registry %}
     repository: "{{ dsc.general.registry }}/hashicorp/vault-k8s"
   agentImage:
     repository: "{{ dsc.general.registry }}/hashicorp/vault"
 {% endif %}
 server:
-{% if dsc.general.registry != "" %}
+{% if dsc.general.registry %}
   image:
     repository: "{{ dsc.general.registry }}/hashicorp/vault"
 {% endif %}
@@ -57,7 +57,7 @@ server:
     enable: true
     size: {{ dsc.vault.pvcSize }}
   image:
-{% if  dsc.general.registry == "" %}
+{% if dsc.general.registry is not defined or dsc.general.registry is defined and dsc.general.registry == "" %}
     repository: docker.io/hashicorp/vault
 csi:
   image:
@@ -66,7 +66,7 @@ csi:
     image:
       repository: docker.io/hashicorp/vault
 {% endif %}
-{% if dsc.general.registry != "" %}
+{% if dsc.general.registry %}
     repository: "{{ dsc.general.registry }}/hashicorp/vault"
 csi:
   image:
