--- a/roles/keycloak/templates/values/00-main.j2
+++ b/roles/keycloak/templates/values/00-main.j2
@@ -1,8 +1,8 @@
 image:
-{% if  dsc.general.registry == "" %}
+{% if dsc.general.registry is not defined or dsc.general.registry is defined and dsc.general.registry == "" %}
   registry: docker.io
 {% endif %}
-{% if dsc.general.registry != "" %}
+{% if dsc.general.registry %}
   registry: "{{ dsc.general.registry }}"
 {% endif %}
   pullPolicy: "IfNotPresent"
