--- a/roles/sonarqube/templates/values/00-main.j2
+++ b/roles/sonarqube/templates/values/00-main.j2
@@ -4,10 +4,10 @@ OpenShift:
 
 image:
   pullPolicy: IfNotPresent
-{% if  dsc.general.registry == "" %}
+{% if dsc.general.registry is not defined or dsc.general.registry is defined and dsc.general.registry == "" %}
   repository: docker.io/sonarqube
 {% endif %}
-{% if dsc.general.registry != "" %}
+{% if dsc.general.registry %}
   repository: "{{ dsc.general.registry }}/sonarqube"
 {% endif %}
 
